syntax = "proto3";

package teams;

option go_package = "../teamspb";

service TeamsService {
    rpc GetTwoTeams(TwoTeamsRequest) returns (TwoTeamsResponse);
    rpc GetAllTeams(AllTeamsRequest) returns (AllTeamsResponse);
}

message TwoTeamsRequest {
    string team1 = 1;
    string team2 = 2;
    int32 year = 3;
}

message AllTeamsRequest {
    int32 startYear = 1;
    int32 endYear = 2;
}

message TwoTeamsResponse {
    Team team1 = 1;
    Team team2 = 2;
}

message AllTeamsResponse {
    repeated TotalTeamData data = 1;
}


message Team {
    string id = 1;
    string name = 2;
    float year = 3;
    float g = 4;
    float mp = 5;
    float fg = 6;
    float fga = 7;
    float fg_pct = 8;
    float fg3 = 9;
    float fg3a = 10;
    float fg3_pct = 11;
    float fg2 = 12;
    float fg2a = 13;
    float fg2_pct = 14;
    float ft = 15;
    float fta = 16;
    float ft_pct = 17;
    float orb = 18;
    float drb = 19;
    float trb = 20;
    float ast = 21;
    float stl = 22;
    float blk = 23;
    float tov = 24;
    float pf = 25;
    float pts = 26;
    float opp_fg = 27;
    float opp_fga = 28;
    float opp_fg_pct = 29;
    float opp_fg3 = 30;
    float opp_fg3a = 31;
    float opp_fg3_pct = 32;
    float opp_fg2 = 33;
    float opp_fg2a = 34;
    float opp_fg2_pct = 35;
    float opp_ft = 36;
    float opp_fta = 37;
    float opp_ft_pct = 38;
    float opp_orb = 39;
    float opp_drb = 40;
    float opp_trb = 41;
    float opp_ast = 42;
    float opp_stl = 43;
    float opp_blk = 44;
    float opp_tov = 45;
    float opp_pf = 46;
    float opp_pts = 47;
    float age = 48;
    float wins = 49;
    float losses = 50;
    float wins_pyth = 51;
    float losses_pyth = 52;
    float mov = 53;
    float sos = 54;
    float srs = 55;
    float off_rtg = 56;
    float def_rtg = 57;
    float net_rtg = 58;
    float pace = 59;
    float fta_per_fga_pct = 60;
    float fg3a_per_fga_pct = 61;
    float ts_pct = 62;
    float efg_pct = 63;
    float tov_pct = 64;
    float orb_pct = 65;
    float ft_rate = 66;
    float opp_efg_pct = 67;
    float opp_tov_pct = 68;
    float drb_pct = 69;
    float opp_ft_rate = 70;
    float avg_dist = 71;
    float pct_fga_fg2a = 72;
    float pct_fga_00_03 = 73;
    float pct_fga_03_10 = 74;
    float pct_fga_10_16 = 75;
    float pct_fga_16_xx = 76;
    float pct_fga_fg3a = 77;
    float fg_pct_00_03 = 78;
    float fg_pct_03_10 = 79;
    float fg_pct_10_16 = 80;
    float fg_pct_16_xx = 81;
    float pct_ast_fg2 = 82;
    float pct_ast_fg3 = 83;
    float pct_fga_dunk = 84;
    float fg_dunk = 85;
    float pct_fga_layup = 86;
    float fg_layup = 87;
    float pct_fg3a_corner = 88;
    float fg3_pct_corner = 89;
    float opp_avg_dist = 90;
    float opp_pct_fga_fg2a = 91;
    float opp_pct_fga_00_03 = 92;
    float opp_pct_fga_03_10 = 93;
    float opp_pct_fga_10_16 = 94;
    float opp_pct_fga_16_xx = 95;
    float opp_pct_fga_fg3a = 96;
    float opp_fg_pct_00_03 = 97;
    float opp_fg_pct_03_10 = 98;
    float opp_fg_pct_10_16 = 99;
    float opp_fg_pct_16_xx = 100;
    float opp_pct_ast_fg2 = 101;
    float opp_pct_ast_fg3 = 102;
    float opp_pct_fga_dunk = 103;
    float opp_fg_dunk = 104;
    float opp_pct_fga_layup = 105;
    float opp_fg_layup = 106;
    float opp_pct_fg3a_corner = 107;
    float opp_fg3_pct_corner = 108;
}

// TotalTeamData message represents total statistics for a team.
message TotalTeamData {
    string teamname = 1;  // TeamName field
    repeated Team stats = 2;  // List of yearly statistics
}